# libs/aether-api/src/handlers/dataplanes/mod.rs
@@ -12,6 +12,7 @@ use crate::handlers::dataplanes::{
     list_deployments_for_dataplane::{
         __path_list_deployments_for_dataplane_handler, list_deployments_for_dataplane_handler,
     },
+    report_outcome::{__path_report_outcome_handler, report_outcome_handler},
 };
 use crate::{router::service_auth_middleware, state::AppState};
 
@@ -22,6 +23,7 @@ pub mod get_dataplane;
 pub mod heartbeat;
 pub mod list_dataplanes;
 pub mod list_deployments_for_dataplane;
+pub mod report_outcome;
 
 #[derive(OpenApi)]
 #[openapi(paths(
@@ -31,6 +33,7 @@ pub mod list_deployments_for_dataplane;
     claim_actions_handler,
     ack_actions_handler,
     heartbeat_handler,
+    report_outcome_handler,
     create_dataplane_handler
 ))]
 pub struct DataPlaneApiDoc;
@@ -44,6 +47,7 @@ pub fn dataplanes_routes(app_state: AppState) -> Router<AppState> {
         .typed_post(claim_actions_handler)
         .typed_post(ack_actions_handler)
         .typed_post(heartbeat_handler)
+        .typed_post(report_outcome_handler)
         .layer(from_fn_with_state(
             app_state.clone(),
             service_auth_middleware,
